--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@media (max-width: 700px) {
+
+@media (max-width: 575px) {
     .btn, .btn-group {
         width:100%;
     }
@@ -6,7 +7,7 @@
 
 .container {
     background-color: #dbe7f9;
-	padding: 20px 4px 15px 4px;
+	padding: 20px 4px 20px 4px;
 }
 
 body {
@@ -17,10 +18,58 @@ body {
 .table {
     border-bottom: black solid 1px;
     border-top: black solid 1px;
+	background: #F2F7FD;
 }
 
 .table > thead > tr > th,
 .table {
     border-bottom: black solid 2px;
     border-top: black solid 2px;
+	background: #ABC7F1;
 }
+
+
+/*
+@media (max-width: 991px) {
+  .btn-group.my-btn-group-responsive > .btn {
+    display: block;
+    width: 100%;
+  }
+  
+   making the border-radius correct //
+  .btn-group.my-btn-group-responsive > .btn:first-child {
+    border-radius: 6px 6px 0 0;
+  }
+  .btn-group.my-btn-group-responsive > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    border-top-right-radius: 6px;
+  }
+  .btn-group.my-btn-group-responsive > .btn:last-child:not(:first-child) {
+    border-radius: 0 0 6px 6px;
+  }
+  
+  /* fixing margin 
+  .btn-group.my-btn-group-responsive .btn + .btn {
+    margin-left: 0;
+  }
+  
+}
+
+
+.btn-group-justified {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: separate; }
+  .btn-group-justified .btn,
+  .btn-group-justified .btn-group {
+    float: none;
+    display: table-cell;
+    width: 1%; }
+    .btn-group-justified .btn .btn,
+    .btn-group-justified .btn-group .btn {
+      width: 100%; }
+    .btn-group-justified .btn .dropdown-menu,
+    .btn-group-justified .btn-group .dropdown-menu {
+      left: auto; }
+	  
+*/
